fixed text alignment

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ html,body {
   background-color: #333;
   color: #fff;
 	padding-top: 50px;
+	padding-left: 20px;
 	text-align: left;
 	font-family: 'Raleway', sans-serif;
   text-transform: uppercase;
